# Gitmind-AI

./: .gitignore  API_CONTRACTS.md  README.md  render.yaml  test_integration.sh
.github/workflows/: deploy.yml
ai/: classifier.py  nl_to_sql.py  requirements.txt
backend/: .env.example  Dockerfile  README.md  build.sh  coral-docs.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.sh
backend/app/: __init__.py  auth.py  claude.py  config.py  coral.py  database.py  embeddings.py  gemini.py  models.py
backend/app/routers/: __init__.py  auth.py  chat.py  commits.py  dashboard.py  issues.py  release_notes.py  releases.py  repo.py  webhooks.py
backend/coral-config/: config.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Hero3D.jsx
frontend/src/components/auth/: LoginModal.jsx  ProtectedRoute.jsx
frontend/src/components/layout/: Layout.jsx  Navbar.jsx  Sidebar.jsx
frontend/src/components/ui/: ErrorBoundary.jsx  LoadingSpinner.jsx  SectionHeader.jsx  SkeletonCard.jsx  StatusBadge.jsx
frontend/src/config/: firebase.js
frontend/src/context/: AuthContext.jsx
frontend/src/data/: mockData.js
frontend/src/pages/: AuthCallback.jsx  Chat.jsx  Dashboard.jsx  DuplicateDetector.jsx  Landing.jsx  Register.jsx  ReleaseNotes.jsx
frontend/src/services/: authService.js  geminiService.js  githubService.js
