[project]
name = "gitmind-backend"
version = "1.0.0"
description = "GitMind — AI-Powered GitHub Repository Intelligence Platform (Backend)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
]

# --- Optional AI/ML dependencies (install when ready) ---
# google-genai>=1.0.0
# sentence-transformers>=3.0.0
# numpy>=1.26.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Type-checker configuration
# ---------------------------------------------------------------------------

[tool.pyrefly]
# Point pyrefly at the local virtual-environment so it resolves installed
# packages (fastapi, psycopg2-binary, pydantic-settings, httpx …) correctly.
python_interpreter = ".venv/Scripts/python.exe"
search_path = ["."]

[tool.mypy]
python_version = "3.10"
mypy_path = "."
explicit_package_bases = true
ignore_missing_imports = true
